--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
+    "@types/node": "20.14.10",
+    "@types/react": "18.3.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.5.3"
   },
-  "homepage" : "maxiesites.com"
-
+  "homepage": "maxiesites.com"
 }
